--- a/ace-gate-eureka/pom.xml
+++ b/ace-gate-eureka/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ace-gate-eureka</artifactId>
+
+    <properties>
+        <joda-time.version>2.9.5</joda-time.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+    </properties>
+
     <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
@@ -33,7 +41,7 @@
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
-            <version>2.9.5</version>
+            <version>${joda-time.version}</version>
         </dependency>
     </dependencies>
     <build>
@@ -47,8 +55,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
         </plugins>
