--- a/ace-gate-way/src/main/resources/application.yml
+++ b/ace-gate-way/src/main/resources/application.yml
@@ -16,12 +16,12 @@ spring:
         cache: false
     redis:
         database: 1
-        host: 127.0.0.1
+        host: 192.168.124.128
         pool:
             max-active: 20
     datasource:
         name: test
-        url: jdbc:mysql://localhost:3306/ag_gate_way?useUnicode=true&characterEncoding=UTF8
+        url: jdbc:mysql://192.168.124.128:3306/ag_gate_way?useUnicode=true&characterEncoding=UTF8
         username: root
         password: 123456
         # 使用druid数据源
@@ -55,6 +55,8 @@ eureka:
     client:
         serviceUrl:
             defaultZone: http://localhost:8761/eureka/
+        register-with-eureka: false
+        fetch-registry: false
 swagger:
     basepackage: com.github.wxiaoqi.gate.back.api
     service:
