--- a/ace-gate-way/src/main/resources/application.yml
+++ b/ace-gate-way/src/main/resources/application.yml
@@ -16,14 +16,14 @@ spring:
         cache: false
     redis:
         database: 1
-        host: 192.168.109.128
+        host: localhost
         pool:
             max-active: 20
     datasource:
         name: test
-        url: jdbc:mysql://192.168.109.128:3306/ag_gate_way?useUnicode=true&characterEncoding=UTF8
+        url: jdbc:mysql://localhost:3306/ag_gate_way?useUnicode=true&characterEncoding=UTF8
         username: root
-        password: 123456
+        password: root
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
@@ -49,8 +49,8 @@ server:
 
 eureka:
     instance:
-        statusPageUrlPath: ${management.context-path}/info
-        healthCheckUrlPath: ${management.context-path}/health
+        statusPageUrlPath: ${management.context-path:actuator}/info
+        healthCheckUrlPath: ${management.context-path:actuator}/health
         preferIpAddress: true
     client:
         serviceUrl:
